[package]
name = "axplat-riscv64-sg2002"
version = "0.1.0"
description = "Implementation of `axplat` hardware abstraction layer for SG2002 board."
documentation = "https://docs.rs/axplat-riscv64-sg2002"
keywords = ["arceos", "os", "hal", "embedded", "riscv"]
categories = ["embedded", "no-std", "hardware-support", "os"]
edition = "2024"

[features]
fp-simd = ["axcpu/fp-simd"]
irq = ["axplat/irq", "dep:riscv_plic"]
rtc = []
smp = ["axplat/smp"]

[dependencies]
kspin = "0.1"
lazyinit = "0.2"
log = "0.4"
riscv = "0.14"
riscv_plic = { version = "0.2", optional = true }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
dw_apb_uart = { git = "https://github.com/elliott10/dw_apb_uart.git", rev = "9de1bf0fb36a17ba2cc29cbed47131ed1b8de12f" }

axconfig-macros = "0.2"
axcpu = { version = "0.3.0", git = "https://github.com/arceos-org/axcpu.git", tag = "dev-v03" }
axplat = { version = "0.3.0", git = "https://github.com/arceos-org/axplat_crates", tag = "dev-v03" }

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]
