[package]
name = "axplat-riscv64-sg2002"
version = "0.1.0"
authors = ["Luoyuan Xiao <xiaoluoyuan@163.com>"]
description = "Implementation of `axplat` hardware abstraction layer for SG2002 board."
documentation = "https://docs.rs/axplat-riscv64-sg2002"
keywords = ["arceos", "os", "hal", "embedded", "riscv"]
categories = ["embedded", "no-std", "hardware-support", "os"]
repository = "https://github.com/elliott10/axplat-riscv64-sg2002"
edition = "2024"

[features]
fp-simd = ["axcpu/fp-simd"]
irq = ["axplat/irq", "dep:riscv_plic"]
rtc = []
smp = ["axplat/smp"]

[dependencies]
kspin = "0.1"
lazyinit = "0.2"
log = "0.4"
riscv = "0.14"
axconfig-macros = "0.2"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
dw_apb_uart = { git = "https://github.com/elliott10/dw_apb_uart.git", rev = "9de1bf0f" }
riscv_plic = { version = "0.2", git = "https://github.com/arceos-org/riscv_plic.git", tag= "dev-v02", optional = true }
axcpu = { version = "0.3.0", git = "https://github.com/arceos-org/axcpu.git", tag = "dev-v03" }
axplat = { version = "0.3.0", git = "https://github.com/arceos-org/axplat_crates", tag = "dev-v03" }

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]
